# mini-snp

./: Cargo.toml
src/: cpuid.rs  main.rs  snp.rs
