[package]
name = "mini-vmm"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
bitfield = "0.16.1"
bitflags = "2.6.0"
kvm-bindings = "0.9.0"
kvm-ioctls = { git = "https://github.com/rust-vmm/kvm-ioctls", rev = "refs/pull/264/head"}
libc = "0.2.155"
vmm-sys-util = "0.12.1"
zerocopy = { version = "0.7.32", features = ["derive", "alloc"] }
